# mpc-kroki-bridge

./: Cargo.toml  Dockerfile  README.adoc
src/: kroki.rs  main.rs  mcp.rs
