[package]
name = "mcp-kroki-bridge"
version = "0.4.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors","trace"] }
tracing = "0.1"
flate2 = "1.0"
base64 = "0.22"
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
chrono = "0.4"
url = "2"